2008-07-30  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-display.c (ccm_display_new):
      - Remove dbe check.

2008-07-30  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* NEWS:
	* configure.ac: Bump to version 0.2.1

2008-07-30  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* data/cairo-compmgr.schemas.in: 
      - re-enable native_pixmap_bind by default.                                            

2008-07-30  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_paint):
      - Don't apply y invert when painting shadow.
	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable),
	(ccm_pixmap_glitz_repair): 
      - Fix TFP redraw.
	* src/ccm-pixmap-xrender.c (ccm_pixmap_xrender_init),
	(ccm_pixmap_xrender_finalize), (ccm_pixmap_xrender_bind),
	(ccm_pixmap_xrender_get_surface):
      - Don't recreate surface on each redraw.
	* src/ccm-window-xrender.c (ccm_window_xrender_finalize),
	(ccm_window_xrender_create_backbuffer),
	(ccm_window_xrender_get_surface), (ccm_window_xrender_flush),
	(ccm_window_xrender_flush_region):
      - Don't use DBE to made double buffering but instead use a pixmap and 
        XCopyArea.

2008-07-23  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* configure.ac: 
    * NEWS: Bump to version 0.2.0

2008-07-23  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* data/cairo-compmgr.schemas.in:
	* plugins/fade/ccm-fade.schemas.in:
	* plugins/magnifier/ccm-magnifier.schemas.in:
	* plugins/menu-animation/ccm-menu-animation.schemas.in:
      - Change default options: native pixmap bind disabled, fade duration 0.2,
        menu-animation duration 0.2 and magnifier shortcut <Super>F12.

2008-07-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c (ccm_screen_check_stack): 
      - Damage window which its position changed in stack.

2008-07-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):